# ask-florence

./: .env.example  .gitignore  README.md  chat_history.py  constants.py  insert_mock_patient_data.py  main.py  model.py  pyproject.toml  query.py  query_constants.py  seed_db.py  send_message.py  utils.py
EHR/: 4857773456.docx  4857773456.txt
db/: florence.db
