[tool.poetry]
name = "async-doc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.103.1" }
twilio = "^8.9.0"
openai = "^0.28.0"
python-decouple = "^3.8"
langchain = "^0.0.300"
faiss-cpu = "^1.7.4"
tiktoken = "^0.5.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
